# C_Study

./: .gitignore  CMakeLists.txt  README.md
CI/example/src/: i2c.h  lights.c  lights.h  temp_sensor.c  temp_sensor.h
CI/example/test/: test_lights.c  test_temp_sensor.c
CI/fizzbuzz/: project.yml
CI/fizzbuzz/src/: fizzbuzz.c  fizzbuzz.h  main.c
CI/fizzbuzz/test/: test_fizzbuzz.c
DataStructure/LinkedList/c/inc/linked_list/: linked_list.h
DataStructure/LinkedList/c/inc/stack/: stack.h
DataStructure/LinkedList/c/src/: main.c
DataStructure/LinkedList/c/src/linked_list/: linked_list.c
DataStructure/LinkedList/c/src/stack/: stack.c
DataStructure/Queue/: Doxyfile
DataStructure/Queue/src/: message_queue.c  message_queue.h  queue.h
OOP/Observer_Pattern/: README.md  project.yml
OOP/Observer_Pattern/src/: main.c  observer.c  observer.h
OOP/Observer_Pattern/test/: test_observer.c
OOP/application/: .gitignore  CMakeLists.txt  main.c
OOP/application/message/: message.c  message.h
OOP/application/test/: test_message.c
TDD/: CMakeLists.txt
TDD/Example/: CMakeLists.txt  Catch2_Example.cpp  Unity_Example.c  factorial.cpp  gtest_example.c  gtest_example.cpp
TDD/modules/: factorial.c  factorial.cpp  factorial.h
TDD/tests/: catch2_main.cpp  gtest_main.cpp  unity_main.c
algorithm/factorial/: CMakeLists.txt  bit_operation.c  factorial.c  makefile
error_handling/src/: error_handling.h  main.c  test.c  test.h
formatter/: clang-format.md  test.c  test.h
playground/: arm-none-eabi-gcc.md  clang.md  const.c  input.c  llvm-ar.md
playground/cmake/: CMakeLists.txt  cmake.md  config.h.in  file_a.c  file_a.h  main.c  tool.cmake
playground/cmake/sub_b/: file_b.h
playground/cmake/sub_c/: file_c.c  file_c.h
playground/log/: CMakeLists.txt  log_test.c
playground/make/: make.md  makefile  tool.mk
playground/make/sub_b/: file_b.c
tests/: test_queue.cpp
